@@ -1,3 +1,8 @@
+L1VMgodata - (0.9.1)
+   Data base now tries to allocate space for more data if max data size is reached.
+
+-- Stefan Pietzonke <jay-t@gmx.net> Sun 16 21:53 +0200
+
 L1VMgodata - (0.9.0)
     Added links for linking between keys.
 
